feat: ビデオ再生ボタンの設定機能を追加
