# docs/swagger.json
@@ -1111,6 +1111,10 @@
                 "default_comment_color": {
                     "type": "string"
                 },
+                "enable_playback_button": {
+                    "description": "ビデオ再生設定",
+                    "type": "boolean"
+                },
                 "last_synced_at": {
                     "description": "Unix timestamp (ms)",
                     "type": "integer"
